--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Poppins:400,700&display=swap");
 
 :root {
     --primary-200: 213, 78%, 87%;
@@ -20,14 +20,14 @@
 }
 
 html {
-    font-size: 112.50%;
+    font-size: 112.5%;
 }
 
 html,
 body {
     padding: 0;
     margin: 0;
-    font-family: 'Poppins', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    font-family: "Poppins", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     font-weight: 400;
     line-height: 1.75;
 }
@@ -96,4 +96,9 @@ h5 {
 small,
 .text_small {
     font-size: 0.8rem;
+}
+
+img {
+    object-fit: cover;
+    object-position: center;
 }
